add childview container

--- a/src/Lily/ChatBundle/Resources/views/Shortcuts/skeleton.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Shortcuts/skeleton.html.twig
@@ -3,11 +3,11 @@
     <section class="scrollable">
 
       <header class="bg-white wrapper-sm clearfix b-b">
-        <div class="col-sm-7 col-xs-9">
+        <div class="col-sm-4 col-xs-3">
          <h5>Commande d'appel</h5>
         </div>
 
-        <div class="col-sm-4 col-xs-3">
+        <div class="col-sm-7 col-xs-9">
           <h5>Description</h5>
         </div>
 
@@ -21,9 +21,9 @@
         <!-- Affichage de la liste des shortcuts -->
       </ul>
 
-      <a class="js-shortcut-new btn btn-sm btn-primary pull-right">
-        <span class="icon-plus pull-left"></span>
-        Ajouter un message pré-enregistré
+      <a class="new-shortcut btn btn-sm btn-primary pull-right">
+        <span class="icon-plus"></span>
+        Ajouter un message
       </a>
 
     </section>
