fix css interference between statistics and chat

--- a/web/css/backoffice/statistics.css
+++ b/web/css/backoffice/statistics.css
@@ -127,10 +127,12 @@ ul.avi-top-list {
 
 .panel-footer .questions {
   color: #6eaee8;
+  background: inherit;
 }
 
 .panel-footer .answered {
   color: #92d050;
+  background: inherit;
 }
 
 .redirections {
