fix modal close button now actually closes the modal

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/skeleton.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/skeleton.html.twig
@@ -51,6 +51,6 @@
   </aside>
 </div>
 
-<button class="modal-close-button">
+<button class="modal-close-button" data-dismiss="modal" aria-label="Close">
   <i class="icon-remove"></i>
 </button>
