Fix btn-group margin top that shouldnt be used

--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
@@ -18,8 +18,8 @@
   	<!--
     	Add question button
     -->
-    <div class="btn-group btn-group-create pull-right">
-    	<button class="btn btn-sm btn-primary" >
+    <div class="btn-group pull-right">
+    	<button class="btn btn-sm btn-primary new-question" >
     		<i class="icon-plus"></i>
     		  Ajouter une question
     	</button>
