--- a/web/css/components/chat.css
+++ b/web/css/components/chat.css
@@ -30,6 +30,17 @@ LIVE CHAT
   float: left;
 }
 
+.conversations .editor {
+  margin: 10px;
+  height: 70px;
+  outline: none;
+}
+
+.conversations .toolbar .btn {
+  background: #EAECF0;
+  padding: 5px;
+}
+
 .live-nav.active a {
   background: #528DC3 !important;
   color: #f2f2f2 !important;
