--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -24,6 +24,14 @@ filter='cssrewrite' %}
 
 {% endstylesheets %}
 
+  
+  <!-- BEGIN TRACKJS -->
+{% if app.environment == 'prod' %}
+  <script type="text/javascript">window._trackJs = { token: '55945a6850454d3d8ecba78c5b307b8a' };</script>
+  <script type="text/javascript" src="//d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js" crossorigin="anonymous"></script>
+{% endif %}
+  <!-- END TRACKJS -->
+
 {% endblock %}
 
   <!--[if lt IE 9]>
@@ -51,8 +59,11 @@ filter='cssrewrite' %}
   <script type="text/template" id="notifsListTpl">
     {% include 'LilyBackOfficeBundle:Utils/Notifs:notif_list.html.twig' %}
   </script>
-
   <script>
+
+    /*
+     * GOOGLE ANALYTICS
+     */
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
