--- a/src/Lily/HomePageBundle/Resources/views/fr/layout.html.twig
+++ b/src/Lily/HomePageBundle/Resources/views/fr/layout.html.twig
@@ -4,6 +4,7 @@
   <head>
 
 	<meta charset="utf-8">
+  <meta name="google-site-verification" content="6lGxXk4n2rH8FzYRep5rwm-RWM0qSYk3XTDooQ-JFI4" />
 	<title>{% block title %}Lily, l'agent virtuel mobile - SAIO{% endblock %}</title>
 
 	<link rel="icon" type="image/png" href="{{ asset('images/home/favicon-saio.png') }}">
