Change adress & phone number

--- a/src/Lily/HomePageBundle/Resources/views/fr/contact.html.twig
+++ b/src/Lily/HomePageBundle/Resources/views/fr/contact.html.twig
@@ -23,7 +23,7 @@
 				<div class="adresse">
 					<img src="{{ asset('images/home/icon-adresse.png') }}" alt="Adresse postale">
 					<h2>{{ 'Adresse postale :'|trans }}</h2>
-					<p>SAIO SAS<br>9, rue Charles Fourier<br>91 000 Evry</p>
+					<p>SAIO SAS<br>44, rue Cauchy<br>94 110 Arcueil</p>
 				</div>
 				<div class="phone">
 					<img src="{{ asset('images/home/icon-phone.png') }}" alt="Téléphone">
