--- a/src/Lily/HomePageBundle/Resources/views/fr/footer.html.twig
+++ b/src/Lily/HomePageBundle/Resources/views/fr/footer.html.twig
@@ -13,7 +13,7 @@
 			</div>
 			<div>
 				<h3>{{ 'Contactez-nous'|trans }}</h3>
-				<p>SAIO SAS<br>9, rue Charles Fourier 91 000 Evry<br>+33 1 60 76 69 71<br>contact@saio.fr</p>
+				<p>SAIO SAS<br>44, rue Cauchy 94110 Arcueil<br>+33 1 55 01 04 37<br>contact@saio.fr</p>
 			</div>
 			<!--<div id="second">+33 1 60 76 69 71<br>contact@saio.fr</div>-->
 			<div class="last">
