fix css in knowledge base

--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
@@ -5,7 +5,7 @@
   </ul>
 </header>
 <section class="w-f">
-  <ul class="js-question-tree wrapper scrollable">
+  <ul class="js-question-tree wrapper scrollable stretch">
     <!--
       Here goes our questions/precisions/action/answer list
      -->
