--- a/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
@@ -73,7 +73,7 @@
         </header>
         <section class="categories">
           <section class="categories-wrapper">
-            <ul class="scrollable js-categories-list">
+            <ul class="scrollable stretch js-categories-list">
               <!--
                 Here goes questions' categories
               -->
