add additional fields

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
@@ -4,12 +4,106 @@
 	</header>
 	<section class="lily-main-content">
 	  <div class="lily-contact-form">
-		<p class="lily-contact-form-label">Adresse e-mail <label class="from" style="display:none">Ce champ ne peut pas être vide.</label></p>
-		<input id="from" class="lily-cst-form-color" type="text" name="from" placeholder="Votre adresse e-mail" size="30"/>
-		<p class="lily-contact-form-label">Objet <label class="object" style="display:none">Ce champ ne peut pas être vide.</label></p>
-		<input id="object" class="lily-cst-form-color" type="text" name="object" placeholder="L'objet de votre demande" size="30"/>
-		<p class="lily-contact-form-label">Message <label class="msg" style="display:none">Ce champ ne peut pas être vide.</label></p>
-		<textarea id="msg" class="lily-cst-form-color" type="text" name="msg" placeholder="Votre message" size="30"/>
+  		
+      <h4 class="form-section-title">Votre demande</h4>
+
+      <p class="lily-contact-form-label">
+  			Adresse e-mail *
+  			<label class="from" style="display:none">Ce champ ne peut pas être vide.</label>
+      </p>
+      <input id="from" class="lily-cst-form-color" type="text" name="from" placeholder="Votre adresse e-mail" size="30"/>
+
+  		<p class="lily-contact-form-label">
+        Objet *
+        <label class="object" style="display:none">Ce champ ne peut pas être vide.</label>
+      </p>
+  		<input id="object" class="lily-cst-form-color" type="text" name="object" placeholder="L'objet de votre demande" size="30"/>
+		
+      <p class="lily-contact-form-label">
+        Message *
+        <label class="msg" style="display:none">Ce champ ne peut pas être vide.</label>
+      </p>
+		  <textarea id="msg" class="lily-cst-form-color" type="text" name="msg" placeholder="Votre message" size="30"/>
+
+      <h4 class="form-section-title">Je souhaite être rappelé</h4>
+
+      <p class="lily-contact-form-label">
+        Date à laquelle vous souhaitez être rappelé(e) *
+        <label class="day" style="display:none">Ces champs ne peuvent pas être vides.</label>
+      </p>
+      <div class="form-inline-group">
+        <select class="form-select form-day">
+          <option value="" selected="selected">Jour</option>
+          <option value="01">1</option>
+          <option value="02">2</option>
+          <option value="03">3</option>
+          <option value="04">4</option>
+          <option value="05">5</option>
+          <option value="06">6</option>
+          <option value="07">7</option>
+          <option value="08">8</option>
+          <option value="09">9</option>
+          <option value="10">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
+          <option value="13">13</option>
+          <option value="14">14</option>
+          <option value="15">15</option>
+          <option value="16">16</option>
+          <option value="17">17</option>
+          <option value="18">18</option>
+          <option value="19">19</option>
+          <option value="20">20</option>
+          <option value="21">21</option>
+          <option value="22">22</option>
+          <option value="23">23</option>
+          <option value="24">24</option>
+          <option value="25">25</option>
+          <option value="26">26</option>
+          <option value="27">27</option>
+          <option value="28">28</option>
+          <option value="29">29</option>
+          <option value="30">30</option>
+          <option value="31">31</option>
+        </select>
+
+        <select class="form-select form-month">
+          <option value selected="selected">Mois</option>
+          <option value="jan">jan</option>
+          <option value="fév">fév</option>
+          <option value="mar">mar</option>
+          <option value="avr">avr</option>
+          <option value="mai">mai</option>
+          <option value="jun">jun</option>
+          <option value="jui">jui</option>
+          <option value="aoû">aoû</option>
+          <option value="sep">sep</option>
+          <option value="oct">oct</option>
+          <option value="nov">nov</option>
+          <option value="déc">déc</option>
+        </select>
+      </div>
+
+      <p class="lily-contact-form-label">
+        Horaire souhaité *
+        <label class="time" style="display:none">Ce champ ne peut pas être vide.</label>
+      </p>
+      <div class="form-inline-group">
+        <select class="form-select form-time">
+          <option value="" selected="selected">- Sélectionner -</option>
+          <option value="9h_10h">entre 09h et 10h</option>
+          <option value="10h_11h">entre 10h et 11h</option>
+          <option value="11h_12h">entre 11h et 12h</option>
+          <option value="12h_13h">entre 12h et 13h</option>
+          <option value="13h_14h">entre 13h et 14h</option>
+          <option value="14h_15h">entre 14h et 15h</option>
+          <option value="15h_16h">entre 15h et 16h</option>
+          <option value="16h_17h">entre 16h et 17h</option>
+          <option value="17h_18h">entre 17h et 18h</option>
+          <option value="18h_19h">entre 18h et 19h</option>
+        </select>
+      </div>
+
 		<button class="lily-btn-submit-color">Envoyer</button>
 	  </div>
 	</section>
