--- a/app/Resources/views/mails/redirection.txt.twig
+++ b/app/Resources/views/mails/redirection.txt.twig
@@ -2,6 +2,8 @@ Bonjour,
 
 Vous avez reçu un nouveau message de la part de {{ from }}.
 
+Vous pouvez le recontacter par téléphone au {{ tel }}, de préférence le {{ date }} vers {{ time }}.
+
 Le message est le suivant :
 
 {{ msg }}
