--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/operator.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/operator.html.twig
@@ -3,13 +3,13 @@
     <span class="pull-left thumb-sm img-circle">
       <img src="<%= operator.avatar %>" alt="avatar" class="avatar-thumb">
     </span>
-    <p class="msg-operator msg-with-avatar">
+    <div class="msg-operator msg-with-avatar">
       <%= msg %>
       <span class="date"><%= moment(date*1000).format('hh:mm') %></span>
-    </p>
+    </div>
 <% } else { %>
-    <p class="msg-operator">
+    <div class="msg-operator">
       <%= msg %>
       <span class="date"><%= moment(date*1000).format('hh:mm') %></span>
-    </p>
+    </div>
 <% } %>
