--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/visitor.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/visitor.html.twig
@@ -1,4 +1,4 @@
-<p class="msg-visitor">
+<div class="msg-visitor">
   <%- msg %>
   <span class="date"><%= moment(date*1000).format('hh:mm') %></span>
-</p>
+</div>
