--- a/web/css/components/chat.css
+++ b/web/css/components/chat.css
@@ -84,7 +84,7 @@ LIVE CHAT
 
 .suggestions-item {
   cursor: pointer;
-  padding: 10px 5px;
+  padding: 10px 10px;
 }
 
 .suggestions-item.selected {
@@ -566,7 +566,7 @@ LIVE CHAT
   float: left;
 }
 
-.conversation-section-item p.msg-visitor {
+.conversation-section-item div.msg-visitor {
   padding-right: 15px;
   text-align: right;
   font-size: 12px;
@@ -577,16 +577,17 @@ LIVE CHAT
   word-wrap: break-word;
 }
 
-.conversation-section-item p.msg-visitor .date {
+.conversation-section-item div.msg-visitor .date {
   color: #d6d6d6;
   font-weight: 300;
 }
 
-.conversation-section-item p.msg-operator {
+.conversation-section-item div.msg-operator {
   border-left: 2px solid #6e7d83;
   font-size: 12px;
   min-height: 35px;
   padding-left: 15px;
+  margin-top: 20px;
 }
 
 .msg-with-avatar {
@@ -594,12 +595,12 @@ LIVE CHAT
   border-left: 0 !important;
 }
 
-.conversation-section-item p span {
+.conversation-section-item span {
   color: #d6d6d6;
   display: block;
 }
 
-.conversation-section p.msg-server {
+.conversation-section div.msg-server {
   border-bottom: 1px dotted #a9abb1;
   padding-bottom: 8px;
   margin-bottom: 20px;
