logic to connect with synpase

--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
@@ -1,7 +1,9 @@
 <header class="header menu-header bg-light lt">
   <ul class="nav nav-tabs nav-tabs-wrapper">
     <li class="answer-nav active"><a href="#answer">Réponse</a></li>
+    <!-- Not shown for the moment
     <li class="versions-nav"><a href="#chat">Versions</a></li>
+    -->
   </ul>
 </header>
 <section class="w-f">
