--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
@@ -1,10 +1,11 @@
 <header class="bg-light header no-padder clearfix">
 
+  <!--
   <div class="lvl-one clear">
 
   	<!--
     	Search field
-    -->
+    - ->
   	<div class="input-group col-xs-6 m-t-sm no-padder">
       <input type="text" class="input-sm form-control" placeholder="Rerchercher...">
   
@@ -17,7 +18,7 @@
   
   	<!--
     	Add question button
-    -->
+    - ->
     <div class="btn-group btn-group-create pull-right">
     	<button class="btn btn-sm btn-primary" >
     		<i class="icon-plus"></i>
@@ -26,6 +27,7 @@
     </div>
   
   </div>
+  -->
   
   <div class="lvl-two">
 
@@ -141,7 +143,15 @@
   
   	</div>
   
-  
+    <!--
+    	Add question button
+    -->
+    <div class="btn-group btn-group-create pull-right">
+    	<button class="btn btn-sm btn-primary" >
+    		<i class="icon-plus"></i>
+    		  Ajouter une question
+    	</button>
+    </div>  
   
   	<!--
     	Paginator
@@ -175,6 +185,7 @@
     	</div>
     	
     </div>
+    
   </div>
 </header>
 
