--- a/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
@@ -26,19 +26,19 @@
       <section class="vbox">
         <header class="nav-bar">
           <ul class="nav nav-pills nav-stacked no-radius">
-            <li class="questions-nav">
+            <li class="nav questions-nav">
               <a href="#questions">
                 <span class="badge pull-right">0</span> 
                 Questions
               </a>
             </li>
-            <li class="files-nav">
+            <li class="nav files-nav">
               <a href="#files">
                 <span class="badge pull-right">0</span> 
                 Fichiers
               </a>
             </li>
-            <li class="links-nav">
+            <li class="nav links-nav">
               <a href="#links">
                 <span class="badge pull-right">0</span> 
                 Liens
