add api & feature in chat op

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/visitor.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/visitor.html.twig
@@ -2,3 +2,4 @@
   <%- msg %>
   <span class="date"><%= moment(date*1000).format('hh:mm') %></span>
 </div>
+<button class="btn-flag-question">Remonter la question</button>
