--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Avi/top-categories.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Avi/top-categories.html.twig
@@ -9,9 +9,9 @@
       _.each(categories, function(item, index) { %>
       
       <li class="avi-top-item">
-        <div class="avi-top-item-position"><%= index %></div>
+        <div class="avi-top-item-position"><%= index+1 %></div>
         <h6 class="avi-top-item-title"><span><%= item.title %></span></h6>
-      < /li>
+      </li>
       
     <% }); } %>
     
