--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -5,8 +5,7 @@
 FONTS
 *********************/
 
-@import url("http://fonts.googleapis.com/css?family=Open+Sans: 300,600");
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,100);
+@import url("http://fonts.googleapis.com/css?family=Lato:400,700,400italic");
 
 @font-face {
 	font-family: 'lily';
@@ -234,8 +233,8 @@ body{
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
+	font-family: 'Lato', 'helvetica', 'roboto', sans-serif;
+	font-weight: 400;
 	font-size: 15px;
 	color: #fff;
 	background: #fff;
@@ -243,7 +242,7 @@ body{
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-weight: 300;
+	font-weight: 400;
 }
 
 * { -webkit-tap-highlight-color: rgba(0,0,0,0); }
@@ -332,7 +331,8 @@ a{
 	width: 100%;
 	position: relative;
 	height: 325px; /* fallback for navigators who don't support the calc function */
-	height: calc(100% - 135px);
+	height: calc(100% - 135px); /* chat */
+  height: calc(100% - 95px);
 }
 
 .lily-avatar-wrapper{
@@ -341,6 +341,7 @@ a{
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+  z-index: 2;
 }
 
 #canvas{
@@ -461,7 +462,7 @@ HEADER
 	vertical-align: middle;
 	display: block;
 	text-align: left;
-	font-weight: 300;
+	font-weight: 400;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -526,7 +527,6 @@ HEADER
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	-webkit-user-drag: none;
-	font-family: 'Open Sans', sans-serif;
 }
 
 .placeholder {
@@ -650,21 +650,21 @@ MESSAGES
 
 
 #chat-box-messages a, #lily-box-messages a {
-	font-weight: 600;
+	font-weight: 700;
 	text-decoration: underline;
 }
 
 #lily-box-messages, #chat-box-messages {
 	position: absolute;
 	top: 0px;
-	width: 100%;
 	height: 100%;
 	padding: 15px 10px;
 	font-size: 0.85em;
-	z-index: 2;
+	z-index: 3;
 	overflow-y: auto;
 	margin-top: 0;
 	margin-bottom: 0;
+  margin-right: 10px;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -677,27 +677,27 @@ MESSAGES
 
 }
 
-#lily-box-messages .lily-msg-user,
-#lily-box-messages .lily-msg-avatar,
-#chat-box-messages .lily-msg-chat-visitor,
-#lily-box-messages .lily-msg-precision,
-#chat-box-messages .lily-msg-chat-operator,
-#lily-box-messages .lily-msg-redirection {
+.lily-msg-user,
+.lily-msg-avatar,
+.lily-msg-chat-visitor,
+.lily-msg-precision,
+.lily-msg-chat-operator,
+.lily-msg-redirection {
 	max-width: 85%;
-	border-radius: 5px;
+	border-radius: 10px;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	margin-bottom: 20px;
-	padding: 10px;
+	margin-bottom: 13px;
+	padding: 5px 8px;
 	text-align: left;
 	text-indent: inherit;
-	line-height: 1.7em;
+	line-height: 1.5;
 	position: relative;
 	clear: both;
 }
 
-#chat-box-messages .lily-msg-chat-operator {
+.lily-msg-chat-operator {
 	float: left;
 	margin-left: 55px;
 	margin-top: 15px;
@@ -814,7 +814,7 @@ MESSAGES
 	display: block;
 	width: 0;*/
 
-	content: "";
+	/*content: "";*/
 	position: absolute;
 	bottom: -8.5px;
 	right: 10px;
@@ -827,7 +827,7 @@ MESSAGES
 
 #lily-box-messages .lily-msg-user:after,
 #chat-box-messages .lily-msg-chat-visitor:after {
-	content: "";
+	/*content: "";*/
 	position: absolute;
 	bottom: -7px;
 	right: 11.5px;
@@ -839,7 +839,7 @@ MESSAGES
 }
 
 #lily-box-messages .lily-msg-redirection:before{
-	content: "";
+	/*content: "";*/
 	position: absolute;
 	bottom: -10px;
 	left: 10px;
@@ -851,7 +851,7 @@ MESSAGES
 }
 
 #lily-box-messages .lily-msg-redirection:after{
-	content: "";
+	/*content: "";*/
 	position: absolute;
 	bottom: -8px;
 	left: 11px;
@@ -864,13 +864,33 @@ MESSAGES
 #lily-box-messages .lily-msg-avatar,
 #lily-box-messages .lily-msg-redirection {
 	float: left;
-	margin-left: 6px;
+	margin-left: 0;
 }
 
+.lily-msg {
+  margin-bottom: 13px;
+  position: relative;
+}
+
+/* Messages of a different type following each other have a
+   larger margin in between */
+.lily-msg-user + .lily-msg-avatar,
+.message-ai + .lily-msg-user{
+  margin-bottom: 13px;
+}
+.lily-msg-user + .lily-msg-user {
+  margin-top: -10px;
+}
+.lily-msg-avatar + .lily-msg-avatar {
+  margin-top: -10px;
+}
+/* End logic for spacing between messages */
+
+
 #lily-box-messages .lily-msg-reporting{
-	position: absolute;
+/*	position: absolute;
 	right: 0;
-	margin-top: 10px;
+	margin-top: 10px;*/
 }
 
 .lily-msg-reporting li.lily-precision-list:nth-child(2){
@@ -890,7 +910,8 @@ MESSAGES
 }
 
 #lily-box-messages .lily-notation-wrapper{
-	margin-bottom: 25px;
+	margin-bottom: 13px;
+  padding: 0;
 }
 
 #lily-chat-notation-wrapper {
@@ -1087,7 +1108,7 @@ THEMATIQUE
 	right: 18px;
 	font-size: 12px;
 	line-height: 52px;
-	font-weight: 300;
+	font-weight: 400;
 	text-transform: uppercase;
 
 }
@@ -1215,11 +1236,22 @@ MENU
 	position: absolute;
 	right: 0;
 	top: 0;
-	height: 40px;
 	width: 40px;
-	cursor: hand;
 	cursor: pointer;
 	text-align: center;
+  height: 40px;
+  margin-right: 8px;
+  padding: 0;
+}
+
+.lily-icon-reduce {
+  width: 26px;
+  height: 6px;
+  border-radius: 2px;
+  vertical-align: middle;
+  margin: -3px auto 0;
+  background: #fff;
+  display: inline-block;
 }
 
 
@@ -1288,7 +1320,7 @@ CONTACT FORM
 	margin-top: 17px;
 	margin-bottom: 11px;
 	font-size: 12px;
-	font-weight: 600;
+	font-weight: 700;
 }
 
 .lily-contact-form .lily-contact-form-title {
@@ -1310,10 +1342,8 @@ CONTACT FORM
 
 .lily-contact-form input,
 .lily-contact-form textarea{
-	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	line-height: 18px;
-	font-weight: 300;
 	padding-left: 10px;
 	height: 40px;
 	display: block;
@@ -1330,7 +1360,7 @@ CONTACT FORM
 	color: #f62441;
 	display: inline;
 	color: 11px;
-	font-weight: 300;
+	font-weight: 400;
 }
 
 .lily-contact-form input.warning, .lily-contact-form textarea.warning {
@@ -1371,7 +1401,7 @@ CONTACT FORM
     margin-top: 10px;
     margin-bottom: 5px;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 /*******************
