--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -1,11 +1,14 @@
 <div id="lily-home" class="lily-page-cont"><!-- wrapper page les différentes pages -->
+  {% if config.chat and chatAvailable %}
 	<header id="lily-header" class="lily-cst-header">
-		<span class="lily-icon lily-left lily-bt-menu lily-icon-menu"></span>
-		{% if config.chat and chatAvailable %}
-		<a href="#/chat" class="lily-right"><p>Parler à un conseiller<i class="lily-icon lily-icon-chat"></i></p></a>
-		{% endif %}
+<!-- 		<span class="lily-icon lily-left lily-bt-menu lily-icon-menu"></span> -->
+		<a href="#/chat" class="lily-right"><p>Parler à un conseiller<i class="lily-icon lily-icon-arrow-right"></i></p></a>
 	</header>
+  {% endif %}
 	<section class="lily-main-content">
+    <div class="avatar-wrapper">
+      <img class="avatar" src="https://files.slack.com/files-pri/T02SBQCVC-F04KWHX21/belette_anime.png">
+    </div>
 		<section class="lily-avatar-wrapper">
 			{# http://cdn-saio.fr/customer/{licence}/templates/avatar-svg.html.twig
 			{% include '@customer/'~licence~'/templates/avatar-svg.html.twig' %}
@@ -16,13 +19,26 @@
 		<!-- Here goes the bubbles-->
 		</div>
 	</section>
-	<section class="lily-search lily-cst-search lily-search-open" id="lily-search">
-		<form id="lily-search-form">
+	<!-- <section class="lily-search lily-cst-search lily-search-open" id="lily-search"> -->
+<!-- 		<form id="lily-search-form">
 			<div class="lily-search-input-wrap">
 				<input class="lily-search-input lily-cst-search-input" placeholder="Quelle est votre question ?" type="text" value="" name="s" id="s">
 			</div>
 			<span class="lily-icon lily-icon-search"></span>
 			<input class="lily-search-submit" type="submit" id="lily-go" value="">
-		</form>
-	</section>
+		</form> -->
+  <!-- </section> -->
+
+  <section class="action-container">
+		<form class="chat-input-component">
+      <div class="wrapper-input group">
+        <div name="chat-input" contenteditable="true" type="contenteditable" data-placeholder="Poser une question..." class="textarea-input chat-input">
+        </div>
+<!--         <div class="placeholder-input">
+          Envoyer un message
+        </div> -->
+        <button class="btn btn-sendmsg btn--nostyle">envoyer</button>
+      </div>
+	  </form>
+  </section>
 </div>
