--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -1,4 +1,4 @@
-﻿/*! normalize.css v1.1.2 | MIT License | git.io/normalize */article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}html,button,input,select,textarea{font-family:sans-serif}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}h2{font-size:1.5em;margin:.83em 0}h3{font-size:1.17em;margin:1em 0}h4{font-size:1em;margin:1.33em 0}h5{font-size:.83em;margin:1.67em 0}h6{font-size:.67em;margin:2.33em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}mark{background:#ff0;color:#000}p,pre{margin:1em 0}code,kbd,pre,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:'';content:none}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}dl,menu,ol,ul{margin:1em 0}dd{margin:0 0 0 40px}menu,ol,ul{padding:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal;*margin-left:-7px}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;*overflow:visible}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*height:13px;*width:13px}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}
+/*! normalize.css v1.1.2 | MIT License | git.io/normalize */article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}html,button,input,select,textarea{font-family:sans-serif}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}h2{font-size:1.5em;margin:.83em 0}h3{font-size:1.17em;margin:1em 0}h4{font-size:1em;margin:1.33em 0}h5{font-size:.83em;margin:1.67em 0}h6{font-size:.67em;margin:2.33em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}mark{background:#ff0;color:#000}p,pre{margin:1em 0}code,kbd,pre,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:'';content:none}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}dl,menu,ol,ul{margin:1em 0}dd{margin:0 0 0 40px}menu,ol,ul{padding:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal;*margin-left:-7px}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;*overflow:visible}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*height:13px;*width:13px}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}
 
 
 /*********************
@@ -83,7 +83,7 @@ FONTS
 	height: 40px;
 	display: inline-block;
 	text-align: center;
-	line-height: 45px;
+	line-height: 40px;
 	vertical-align: middle;
 	font-size: 16px;
 }
@@ -183,6 +183,31 @@ body {
 	text-shadow: none;
 }
 
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.btn {
+  -webkit-appearance: none;
+  display: inline-block;
+  cursor: pointer;
+  background: transparent;
+  border: solid 1px;
+}
+
+.btn--nostyle {
+  border: none;
+}
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 hr {
 	display: block;
 	height: 1px;
@@ -236,9 +261,21 @@ body{
 	font-family: 'Lato', 'helvetica', 'roboto', sans-serif;
 	font-weight: 400;
 	font-size: 15px;
-	color: #fff;
+	color: #282828;
 	background: #fff;
 	-webkit-user-select: none;
+}
+
+input,
+textarea,
+[contenteditable] {
+    -webkit-user-select: text;
+    user-select: text;
+}
+
+.app-wrapper {
+  width: 100%;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -409,22 +446,54 @@ a{
 HEADER
 *********************/
 
-.lily-page header#lily-header{
-	position: relative;
-	/*	top: 25px;*/
-	left: 0;
-	width: 100%;
-	height: 45px;
-	margin: 0;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	z-index: 4;
+.lily-page .lily-cst-header{
+  position: relative;
+  left: 0;
+  width: 100%;
+  height: 56px;
+  margin: 0;
+  padding: 0 13px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  z-index: 4;
+  text-align: center;
+  line-height: 40px;
+  box-shadow: 0px 1px 0px rgba(206, 206, 206, 0.46);
 }
 
-#lily-header p{
-	margin-right: 13px;
-	cursor: pointer;
+.lily-cst-header a {
+  display: inline-block;
+  padding: 9px;
+  width: 100%;
+  border: solid 1px #A8A8A8;
+  line-height: 1;
+  border-radius: 5px;
+  margin-top: 10px;
+  background: rgb(255, 255, 255);
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.lily-cst-header a:hover {
+  background: rgba(169, 8, 19, 0.15);
+}
+
+.lily-cst-header a:active {
+  background: rgba(169, 8, 19, 0.3);
+}
+
+.lily-cst-header p {
+  margin-right: 0;
+  cursor: pointer;
+  height: auto;
+  padding: 0;
+  display: inline-block;
+}
+
+.lily-cst-header .lily-icon-arrow-right:before {
+  line-height: 1;
 }
 
 #lily-header i{
@@ -474,12 +543,12 @@ HEADER
 	padding-top: 10px;
 }
 
-
 .lily-bt-menu{
 	display: block;
 	z-index: 5;
 	position: relative;
 	cursor: pointer;
+  margin-left: 2px;
 }
 
 #lily-bt-home{
@@ -510,6 +579,80 @@ HEADER
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
+}
+
+.action-container {
+  position: absolute;
+  width: 100%;
+  min-height: 45px;
+  bottom: 0;
+  left: 0;
+  background: white;
+}
+
+.chat-input-component,
+.ai-input-component {
+  width: 100%;
+  padding: 0 9px;
+  margin: 0;
+  margin-bottom: 9px;
+  display: block;
+  min-height: 30px;
+}
+
+.wrapper-input {
+  padding: 4px;
+  background: #e8e8e8;
+  border-radius: 3px;
+  height: 100%;
+  position: relative;
+  border: solid 1px white;
+}
+
+.textarea-input {
+  position: relative;
+  display: inline-block;
+  padding: 6px;
+  width: calc(100% - 72px);
+  min-height: 36px;
+  max-height: 64px;
+  border: 1px solid rgba(181, 181, 181, 0.25);
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #5e5e5e;
+  border-radius: 2px;
+  line-height: 1;
+  vertical-align: bottom;
+  z-index: 3;
+}
+
+*[data-placeholder]:not(:focus):not([data-div-placeholder-content]):before {
+  content: attr(data-placeholder);
+  float: left;
+  margin-left: 0;
+  color: #b3b3b3;
+  pointer-events: none;
+  z-index: 2;
+  margin-top: 3px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.btn-sendmsg {
+  position: absolute;
+  bottom: 6px;
+  right: 5px;
+  padding: 8px 7px;
+  border-radius: 2px;
+  color: #545454;
+}
+
+.btn-sendmsg:active,
+.btn-sendmsg:focus {
+  background: white;
+}
+
+.btn-sendmsg:hover {
+  color: #464646;
 }
 
 .lily-search-input-wrap{
@@ -576,7 +719,7 @@ Typeahead Styles
 
 .lily-search-input,
 .tt-suggestion {
-
+  position: relative;
 }
 
 .lily-search-input {
@@ -590,9 +733,9 @@ Typeahead Styles
 
 .tt-suggestions .tt-suggestion,
 .empty-suggestion {
-  padding: 10px 8px;
-  font-size: 14px;
-  line-height: 16px;
+  padding: 11px 9px;
+  font-size: 15px;
+  line-height: 1.3;
 }
 
 .tt-suggestions .tt-suggestion {
@@ -633,15 +776,21 @@ Typeahead Styles
 .twitter-typeahead {
   width: 100%;
 }
+
+/* Ugliest thing I ever had to write in css... :'( */
 .twitter-typeahead .tt-dropdown-menu {
   text-align: left;
-  left: 0;
+  left: -4px!important;
   z-index: 100;
   right: auto;
-  bottom: 51px;
-  width: 100%;
+  bottom: calc(100% + 6px);
+  width: calc(100% + 6px);
   top: auto !important;
   background: #fff;
+  border-left: solid 1px #cecece;
+  border-right: solid 1px #cecece;
+  border-bottom: solid 1px #cecece;
+  border-radius: 3px;
 }
 
 /******************
@@ -658,13 +807,14 @@ MESSAGES
 	position: absolute;
 	top: 0px;
 	height: 100%;
-	padding: 15px 10px;
-	font-size: 0.85em;
+  width: 100%;
+  padding: 13px 13px 125px;
+	font-size: 15px;
 	z-index: 3;
 	overflow-y: auto;
 	margin-top: 0;
 	margin-bottom: 0;
-  margin-right: 10px;
+  margin-right: 0;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -674,7 +824,27 @@ MESSAGES
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
+}
 
+#chat-box-messages {
+  padding: 13px;
+}
+
+.avatar-wrapper {
+  position: absolute;
+  bottom: 25px;
+  left: 13px;
+  width: 75px;
+  height: 75px;
+  border: solid 1px #888888;
+  overflow: hidden;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.avatar-wrapper .avatar {
+  width: 70%;
+  margin-top: 8px;
 }
 
 .lily-msg-user,
@@ -689,20 +859,26 @@ MESSAGES
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	margin-bottom: 13px;
-	padding: 5px 8px;
-	text-align: left;
-	text-indent: inherit;
-	line-height: 1.5;
+  padding: 5px 8px 7px;
+  text-align: left;
+  text-indent: inherit;
+  line-height: 1.3;
 	position: relative;
 	clear: both;
+  display: none;
+}
+
+.lily-message-show {
+  -webkit-animation: showFromBottom .2s cubic-bezier(0.25, 0.1, 0, 1.46) both;
+  -moz-animation: showFromBottom .2s cubic-bezier(0.25, 0.1, 0, 1.46) both;
+  animation: showFromBottom .2s cubic-bezier(0.25, 0.1, 0, 1.46) both;
+  display: block;
 }
 
 .lily-msg-chat-operator {
 	float: left;
-	margin-left: 55px;
-	margin-top: 15px;
-	border: solid 1px rgba(206, 206, 206, 0.8);
-	color: #424242;
+	margin-left: 29px;
+	margin-top: 0;
 }
 
 
@@ -710,7 +886,6 @@ MESSAGES
 	display: block;
   clear: both;
   padding: 1px;
-  color: #424242;
 }
 
 .lily-msg-server-title {
@@ -761,24 +936,49 @@ MESSAGES
 
 #chat-box-messages .lily-msg-chat-operator-info {
 	position: absolute;
-	left: -65px;
+  left: -29px;
 	top: 0;
 	text-align: center;
 }
 
-#chat-box-messages .thumb-sm.avatar {
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
 
-#chat-box-messages .lily-msg-chat-operator-info p {
-	width: 60px;
-	font-size: 9px;
-	color: #b8b8b8;
-	text-align: center;
-	line-height: 10px;
-	margin-top: 3px;
+/* Position tooltip above the element */
+[data-tooltip]:before {
+  position: absolute;
+  top: 30px;
+  left: 10px;
+  margin-bottom: 5px;
+  margin-left: 0;
+  padding: 4px 6px;
+  width: auto;
+  min-width: 90px;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 13px;
+  line-height: 1.2;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  opacity: 1;
+}
+
+#chat-box-messages .thumb-sm.avatar {
+	width: 23px;
+  height: 23px;
+	border-radius: 50%;
 }
 
 #lily-box-messages .lily-msg-redirection {
@@ -801,7 +1001,6 @@ MESSAGES
 #lily-box-messages .lily-msg-user,
 #chat-box-messages .lily-msg-chat-visitor {
 	float: right;
-	margin-right: 8px;
 }
 
 #lily-box-messages .lily-msg-user:before,
@@ -871,19 +1070,22 @@ MESSAGES
 .lily-msg {
   margin-bottom: 13px;
   position: relative;
+  -webkit-user-select: initial;
 }
 
 /* Messages of a different type following each other have a
    larger margin in between */
 .lily-msg-user + .lily-msg-avatar,
-.message-ai + .lily-msg-user{
+.message-ai + .lily-msg-user,
+.lily-msg-chat-operator + .lily-msg-chat-visitor ,
+.lily-msg-chat-visitor + .lily-msg-chat-operator {
   margin-bottom: 13px;
 }
-.lily-msg-user + .lily-msg-user {
-  margin-top: -10px;
-}
-.lily-msg-avatar + .lily-msg-avatar {
-  margin-top: -10px;
+.lily-msg-user + .lily-msg-user ,
+.lily-msg-avatar + .lily-msg-avatar,
+.lily-msg-chat-operator:not(.lily-msg-chat-wait) + .lily-msg-chat-operator,
+.lily-msg-chat-visitor + .lily-msg-chat-visitor {
+  margin-top: -11px;
 }
 /* End logic for spacing between messages */
 
@@ -926,9 +1128,9 @@ MESSAGES
 	box-shadow: 0px 2px 6px 0px rgba(155, 155, 155, 0.38);
 }
 
-#lily-chat-notation-wrapper p{
+#lily-chat-notation-wrapper p {
 	display: inline-block;
-	color: #373737;;
+	color: #373737;
 	font-size: 11px;
 }
 
@@ -943,13 +1145,18 @@ MESSAGES
 	margin-left: 11px;
 }
 
+.lily-icon-thumb-up,
+.lily-icon-thumb-down {
+  color: #e1e1e1;
+}
+
 #lily-chat-notation-wrapper .lily-icon-thumb-up:before {
-font-size: 12px !important;
+  font-size: 12px !important;
 }
 
 #lily-chat-notation-wrapper .lily-icon-thumb-down:before {
-font-size: 12px !important;
-margin-right: 15px !important;
+  font-size: 12px !important;
+  margin-right: 15px !important;
 }
 
 .lily-icon-thumb-up.active {
@@ -1221,15 +1428,26 @@ MENU
 	position: absolute;
 	top: 0;
 	left: 0;
+  color: #fff;
+  border-radius: 3px 3px 0 0;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
+  padding: 0;
 }
 
 #lily-toolbar-name{
-	text-align: left;
-	margin-left: 10px;
-	font-size: 16px;
+  text-align: left;
+  margin-left: 0;
+  white-space: nowrap;
+  font-size: 16px;
+  text-overflow: ellipsis;
+  width: 100%;
+  display: inline-block;
+  position: absolute;
+  padding: 0 40px;
+  left: 0;
+  overflow: hidden;
 }
 
 #lily-toolbar-icons{
@@ -1246,11 +1464,11 @@ MENU
 }
 
 .lily-icon-reduce {
-  width: 26px;
-  height: 6px;
-  border-radius: 2px;
+  width: 20px;
+  height: 3px;
+  border-radius: 1px;
   vertical-align: middle;
-  margin: -3px auto 0;
+  margin: -4px auto 0;
   background: #fff;
   display: inline-block;
 }
