--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
@@ -1,4 +1,4 @@
-<header class="header menu-header bg-light lt">
+<header class="header edit-header">
   <ul class="nav nav-tabs nav-tabs-wrapper">
     <li class="answer-nav active"><a href="#answer">Réponse</a></li>
     <!-- Not shown for the moment
