--- a/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
@@ -25,51 +25,31 @@
     <aside class="app-navigator bg-light b-r" style="width: 220px;">
       <section class="vbox">
         <header class="nav-bar">
-          <ul class="nav nav-pills nav-stacked no-radius">
-            <li class="nav questions-nav">
-              <a href="#questions">
-                <span class="badge pull-right">0</span> 
-                Questions
-              </a>
-            </li>
-            <li class="nav files-nav">
-              <a href="#files">
-                <span class="badge pull-right">0</span> 
-                Fichiers
-              </a>
-            </li>
-            <li class="nav links-nav">
-              <a href="#links">
-                <span class="badge pull-right">0</span> 
-                Liens
-              </a>
-            </li>
-            <li class="categories-divider">
-              <button class="btn-fullscreen btn pull-right">
-                <i class="icon-resize-full"></i>
-                <span>Réduire</span>
+          <div class="categories-divider">
+            <button class="btn-fullscreen btn pull-right">
+              <i class="icon-resize-full"></i>
+              <span>Réduire</span>
+            </button>
+            <button class="btn-add btn pull-right">
+              <i class="icon-plus"></i>
+              <span>Ajouter une catégorie</span>
+            </button>
+            <div class="btn-collapse pull-right">
+              <button class="btn" data-toggle="dropdown">
+                <i class="icon-sort"></i>
+                <span>Afficher</span>
               </button>
-              <button class="btn-add btn pull-right">
-                <i class="icon-plus"></i>
-                <span>Ajouter une catégorie</span>
-              </button>
-              <div class="btn-collapse pull-right">
-                <button class="btn" data-toggle="dropdown">
-                  <i class="icon-sort"></i>
-                  <span>Afficher</span>
-                </button>
-                <ul class="dropdown-menu">
-      	      		<li>
-      	      			<a data-collapse="down" data-order="desc" href="#">Tout afficher</a>
-      	      		</li>
-      	      		<li>
-      	      			<a data-collapse="up" data-order="asc" href="#">Tout masquer</a>
-      	      		</li>
-      	      	</ul>
-              </div>
-              <h5>Categories</h5>
-            </li>
-          </ul>
+              <ul class="dropdown-menu">
+    	      		<li>
+    	      			<a data-collapse="down" data-order="desc" href="#">Tout afficher</a>
+    	      		</li>
+    	      		<li>
+    	      			<a data-collapse="up" data-order="asc" href="#">Tout masquer</a>
+    	      		</li>
+    	      	</ul>
+            </div>
+            <h5>Questions</h5>
+          </div>
         </header>
         <section class="categories">
           <section class="categories-wrapper">
@@ -149,6 +129,7 @@
 	{% endblock %}
 
   </section>
+  <div class="shadow"></div>
 </section>
 
 <div class="dragger hide"></div>
