--- a/web/css/backoffice/knowledge.css
+++ b/web/css/backoffice/knowledge.css
@@ -1,6 +1,17 @@
 /****************************************************************************************
     COMMON
 ****************************************************************************************/
+
+.shadow {
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  z-index: 100;
+  left: 101px;
+  top: 44px;
+  box-shadow: 0 4px 9px rgba(0, 0, 0, 0.07), 0 4px 4px rgba(0, 0, 0, 0.07);
+}
+
 ul {
   list-style-type: none;
   padding: 0;
@@ -14,10 +25,11 @@ ul {
   border: none;
   cursor: pointer;
   position: static;
+  border-left: 5px solid transparent;
 }
 
 .list-group-item.active {
-  background: #D8DBDD !important;
+  border-left: 5px solid #62a5e2;
 }
 
 .category-label {
@@ -96,17 +108,20 @@ ul {
 }
 
 .categories-divider {
-  margin-top: 30px !important;
-  padding: 10px;
+  padding: 16px;
+  border-top: 1px solid #E4E4E4;
+  border-bottom: 1px solid #E4E4E4;
 }
 
 .categories-divider h5 {
-  font-size: 13px;
+  font-size: 14px;
   display: inline;
+  font-weight: 600;
+  color: #444C5C;
 }
 
 .categories {
-  top: 200px !important;
+  top: 60px !important;
 }
 
 .categories-wrapper {
@@ -281,7 +296,7 @@ ul {
 .paginator {
   display: inline-block;
   float: right;
-  margin-right: 15px;
+  margin-right: 16px;
 }
 
 .questions-wrapper {
@@ -363,19 +378,31 @@ ul {
   margin-right: 9px;
 }
 
-.treel-el {
+.edit-header {
+  background: #E8EAEC;
+}
+
+.tree-el {
   position: relative;
-  border-radius: 3px;
-  border: 1px solid #e2e5e8;
-  background: #f9fafc;
+  background: #F5F7FA;
+  border: 1px solid #EFF1F4;
   padding: 5px;
-  height: 35px;
+  height: 40px;
   margin: 5px 0 5px 0;
 }
 
-.treel-el .btn-action {
+.tree-el:hover {
+  border: 1px solid #D6DADF;
+}
+
+.tree-el.editing {
+  border-color: #b8bcc1 !important;
+}
+
+.tree-el .btn-action {
   position: absolute;
   right: 0;
+  top: 8px;
   width: 20px;
   height: 25px;
   text-align: center;
@@ -389,36 +416,32 @@ ul {
   left: -110px;
 }
 
-.treel-el .btn-collapse {
+.tree-el .btn-collapse {
   position: absolute;
-  top: 7px;
+  top: 9px;
   left: 7px;
   font-size: 13px;
   cursor: pointer;
 }
 
-.treel-el.title {
+.tree-el.title {
   margin-top: 20px;
 }
 
-.treel-el.child {
+.tree-el.child {
   margin-left: 40px;
 }
 
-.treel-el.editing {
-  border-color: #62a5e2;
-}
-
-.treel-el.answer.editing {
+.tree-el.answer.editing {
   height: auto;
 }
 
-.treel-el.editing .btn-action, .treel-el.editing .btn-collapse {
+.tree-el.editing .btn-action, .tree-el.editing .btn-collapse {
   display: none;
 }
 
 .toolbar {
-  background: #DDDDDD;
+  background: #DADEE2;
   border-radius: 3px;
   display: none;
   padding: 5px;
@@ -431,25 +454,42 @@ ul {
   font-size: 10px;
 }
 
-.treel-el.answer.editing .toolbar {
+.tree-el.answer.editing .toolbar {
   display: block;
 }
 
-.treel-el input {
+.parent.title {
+  margin: 20px 0 30px 0;
+}
+
+.parent.title input {
+  border: none;
+  background: transparent;
+  box-shadow: none;
+  font-size: 15px;
+  color: #666666;
+  padding: 5px;
+}
+
+.parent.title:hover input, .parent.title.editing input {
+  border-bottom: 1px dashed #62a5e2;
+}
+
+.tree-el input {
   border: none;
   background: transparent;
   box-shadow: none;
   padding: 0;
-  height: 29px;
+  height: 33px;
   margin-top: -2px;
   margin-left: 25px;
   font-size: 12px;
   color: #828282;
 }
 
-.treel-el .editor {
+.tree-el .editor {
   height: 20px;
-  margin: 2px 15px 0 25px;
+  margin: 5px 15px 0 25px;
   outline: none;
   background: transparent;
   font-size: 12px;
@@ -460,7 +500,7 @@ ul {
   text-overflow: ellipsis; 
 }
 
-.treel-el.answer.editing .editor {
+.tree-el.answer.editing .editor {
   padding: 10px 0 20px 0;
   margin: 0;
   height: 100%;
@@ -532,4 +572,5 @@ ul {
 
 .tree-children {
   padding-left: 75px;
+  margin-top: -15px;
 }
