lily prefix removed

--- a/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
@@ -51,7 +51,7 @@
     {% autoescape false %}
       <script type="text/javascript">
   	    var config = {};
-        config.root = '{{ app.request.getBaseURL() }}/lily/api';
+        config.root = '{{ app.request.getBaseURL() }}/api';
         config.client = JSON.parse('{{ client | serialize('json') | raw }}');
         {% if app.environment == 'dev' %}
         config.wsserver = 'ws://develop.saio.fr';
