--- a/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
@@ -100,7 +100,7 @@
 
   <script type="text/javascript">
     var config = {};
-    config.root = '{{ app.request.getBaseURL() }}/lily/api';
+    config.root = '{{ app.request.getBaseURL() }}/api';
     {% if app.environment == 'dev' %}
     config.wsserver = 'ws://develop.saio.fr';
     {% else %}
