--- a/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
@@ -73,7 +73,7 @@
     {% autoescape false %}
       <script type="text/javascript">
         var config = {};
-        config.root = '{{ app.request.getBaseURL() }}/lily/api';
+        config.root = '{{ app.request.getBaseURL() }}/api';
         config.userId = '{{ app.user.id }}';
         {% if app.environment == 'dev' %}
         config.wsserver = 'ws://develop.saio.fr';
