--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
@@ -75,7 +75,7 @@
     {% autoescape false %}
       <script type="text/javascript">
   	    var config = {};
-        config.root = '{{ app.request.getBaseURL() }}/lily/api/statistics';
+        config.root = '{{ app.request.getBaseURL() }}/api/statistics';
         config.client = JSON.parse('{{ client | serialize('json') | raw }}');
         config.userId = '{{ app.user.id }}';
         {% if app.environment == 'dev' %}
