--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -82,7 +82,7 @@
     {% autoescape false %}
     <script type="text/javascript">
       var config = {};
-      config.root = '{{ app.request.getBaseURL() }}/lily/api';
+      config.root = '{{ app.request.getBaseURL() }}/api';
       config.licence = '{{ app.user.client.licence }}';
       config.maxusers = '{{ app.user.client.config.maxusers }}';
       {% if app.environment == 'dev' %}
